--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
 
 dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 }
 
